2015-06-08  Esa Peuha  <esa.peuha@gmail.com>

	* games/Makefile.am: Fix spider-img.c dependencies.
	* games/Makefile.in: Update.

2015-06-07  Esa Peuha  <esa.peuha@gmail.com>

	* games/spider.c, lib/imagelib.h: Remove declaration of nonexisting
	  function get_image_set_display_type
	* lib/table.h: Add everything defined in table.c
	* lib/cards.h: Remove things now in table.h
	* games/canfield.c, games/freecell.c, games/golf.c,
	  games/mastermind.c, games/merlin.c, games/minesweeper.c,
	  games/pegged.c, games/solitaire.c, games/spider.c,
	  games/taipedit.c, games/taipei.c, games/taipeilib.c,
	  games/thornq.c, lib/funcs.c, lib/help.c, lib/imagelib.c,
	  lib/stack.c, lib/table.c, lib/xwin.c, tests/penguins.c,
	  tests/test1.c, tests/test3.c, tests/test4.c, tests/test5.c,
	  tests/test6.c: Update included files.

2015-06-06  Esa Peuha  <esa.peuha@gmail.com>

	* games/canfield.c, games/golf.c, games/mastermind.c, games/merlin.c,
	  games/minesweeper.c, games/pegged.c, games/taipedit.c,
	  games/taipei.c, games/taipeilib.c, lib/help.c, lib/stack.c:
	  Remove unneeded extern declarations.

2015-06-05  Esa Peuha  <esa.peuha@gmail.com>

	* games/thornq.c: Fix undo bug.
	* lib/stack.c (stack_flip_move_stack): Fix undo bug.

2015-06-04  Esa Peuha  <esa.peuha@gmail.com>

	* games/solitaire.c (app_options): Mark non-static so that command
	  line options work.
	* lib/stack.c (stack_fan_*): Mark variables static.
	* lib/table.c: Remove unused extern declarations of stack_fan_*
	* games/golf.c: Replace reference to stack_fan_down with call to
	  stack_get_fans.
	* games/spider.c, games/thornq.c: Don't pass pointers to unused
	  variables to stack_get_fans.

2015-06-03  Esa Peuha  <esa.peuha@gmail.com>

	* games/freecell.c: fix display bug.
	* lib/cards.h, lib/stack.c (stack_flip_move_stack): New function.
	* games/solitaire.c, games/thornq.c: Use stack_flip_move_stack
	* games/spider.c: Use stack_flip_move_stack
	* docs/toolkit.html: Document stack_flip_move_stack
