@@ -21,6 +21,7 @@
 #include <X11/Xlib.h>
 
 #include "table.h"
+#include "imagelib.h"
 #include "cards.h"
 
 #define W CARD_WIDTH
