@@ -24,6 +24,7 @@
 #include <X11/keysym.h>
 
 #include "table.h"
+#include "imagelib.h"
 #include "cards.h"
 
 static Picture *xlogo, *splash, *youwin, *youlose;
